# IndoorLocalization2System

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fusion.cpp  movingAverageFilter.cpp  trilateration.cpp  varinace+Fusion
app/src/main/java/com/pracowniatmib/indoorlocalizationsystem/: AlgorithmMenuAdapter.java  AlgorithmMenuItemViewHolder.java  AlgorithmOption.java  BeaconManager.java  MainActivity.java  MapActivity.java  MapFragment.java  MapHolderFragment.java  MyApplication.java  OnMapPositionChangeListener.java  SensorChecker.java  Transmitter.java  User.java
app/src/main/res/drawable/: ble_point.xml  other_user_cursor.xml  wifi_point.xml
app/src/main/res/layout/: activity_main.xml  activity_map.xml  algorithm_menu_item.xml  fragment_map.xml  fragment_map_holder.xml  map_update_menu_alert.xml
app/src/main/res/values/: strings.xml
